# metis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.railway  README.md  docker-compose.yml  entrypoint.railway.sh  entrypoint.sh  go.mod  railway.json
bench/: RESULTS.md  benchmark.py  questions.json  results-e1.json  results-e2.json  results-h1.json  results-h2-smoke.json  results-hard-nofastpath.json  results-hard-typegated.json  results-hard.json  results-layers.json  results-local.json  results-railway.json
bench/corpus/: caldera-fauna.md  meridian-changelog.md  meridian-governance.md  meridian-spec.md
bench/h2-smoke/: dataset.json
bench/star-probe/: RESULTS-star-probe.md  repair_probe.py  run-qwen3-1.7b.txt  run-repair-qwen3-1.7b.txt  star_probe.py
cmd/metis/: main.go
cmd/rnt/: main.go
docs/design/: 00-constraints-and-physics.md  01-architecture-the-grail.md  02-build-plan.md  03-training-system-RNT.md  04-RNT-results-log.md  05-architecture-v2-speed.md  06-generate-verify-search.md  07-implementation-and-deployment-log.md  08-phase2-cascade.md  09-hard-benchmark.md  10-reasoning-compiler-h1.md  11-code-agent-specialization.md  12-metis-1-code-model-from-scratch.md  13-metis-1m-hive-training-on-macbook.md  14-the-compiler-is-an-infinite-teacher.md  15-metis-1-vera-r-architecture.md  16-learning-from-agents-a1-and-ornith.md  17-consult-sakana-generator-gate.md  (+2 more)
nli/: Dockerfile  server.py
sample-docs/: zephyr.md
searxng/: Dockerfile  settings.yml
src/: benchlayers.rs  conductor.rs  lib.rs  monitor.rs  scaffold.rs  verifier.rs
(+114 files in other folders)
