[package]
name = "metis-0"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Metis — a small reasoning core (Cortex) + retrieval (Library) + tools (Hands), fully local. Rust port."

[lib]
name = "metis_0"
path = "src/lib.rs"

[[bin]]
name = "metis"
path = "src/bin/metis.rs"

[[bin]]
name = "rnt"
path = "src/bin/rnt.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
# http-only (all ollama traffic is plaintext over localhost / the internal docker network),
# so we drop TLS to keep the build pure-Rust — no ring/C compilation on musl.
ureq = { version = "2", default-features = false, features = ["json"] }
tiny_http = "0.12"
regex = "1"
chrono = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
